deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitopsdemo
spec:
  selector:
    app.kubernetes.io/name: gitopsdemo
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
