deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitopsdemo
  labels:
    app.kubernetes.io/name: gitopsdemo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/gitopsdemo/(?.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gitopsdemo
                port:
                  number: 8080
